# fractions

./: pyproject.toml
factions/: fractions.py
fractions/: fractions.py
tests/: test_fractions.py
