[tool.poetry]
name = "fractions"
version = "0.1.0"
description = ""
authors = ["Jan Willems <jw@elevenbits.com>"]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^11.0.0"
typer = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
